src/test/deca/context/invalid/provided/08_invalid_cast_boolean_to_float.deca
{
    boolean b;
    float f;

    b = true;
    // Interdit : cast boolean -> float
    f = (float)(b);  // Doit déclencher une erreur sémantique

    println("Ne devrait jamais s'afficher");
}
